# academic-performance-ml

./: .gitignore  Cargo.toml  README.md  student_data.db  student_data.db-shm  student_data.db-wal
data/: students.csv
migrations/: 001_initial.sql
src/: analytics.rs  data.rs  database.rs  gamification.rs  main.rs  model.rs
templates/: index.html
tests/: basic_test.rs
