[package]
name = "student_classifier"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Remove linfa dependencies and use a simpler approach
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"