[package]
name = "student_classifier"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
csv = "1.3" 